--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -7,33 +7,70 @@
     android:layout_height="match_parent"
     tools:context="com.fields.curiumx.fields.SignInActivity">
 
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="295dp"
+        android:layout_height="131dp"
+
+        android:contentDescription="@string/logo"
+        android:scaleType="centerCrop"
+        android:src="@drawable/fields_full"
+        app:layout_constraintBottom_toTopOf="@id/welcome"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/welcome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:text="@string/welcome_back"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@id/emailSignIn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/logo" />
+
     <EditText
         android:id="@+id/emailSignIn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
-        android:hint="Email"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:hint="@string/email"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/welcome"/>
 
     <EditText
         android:id="@+id/passwordSignIn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Password"
+        android:hint="@string/password"
         android:inputType="textPassword"
-        app:layout_constraintTop_toBottomOf="@id/emailSignIn"/>
+        app:layout_constraintTop_toBottomOf="@id/emailSignIn"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="32dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <Button
         android:id="@+id/signInButton"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="32dp"
         android:backgroundTint="@color/colorPrimary"
+        android:text="@string/sign_in"
+        app:layout_constraintEnd_toEndOf="parent"
 
-        android:text="Sign In"
-        app:layout_constraintBottom_toTopOf="@+id/or"
-        app:layout_constraintTop_toBottomOf="@+id/passwordSignIn"
-        tools:layout_editor_absoluteX="30dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/passwordSignIn" />
 
     <TextView
         android:text="Don't have account yet? Sign Up"
@@ -43,45 +80,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:gravity="center"
         android:layout_marginBottom="10dp"/>
-
-    <com.google.android.gms.common.SignInButton
-        android:id="@+id/googleSignInButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/or"
-        android:layout_margin="10dp">
-
-    </com.google.android.gms.common.SignInButton>
-
-    <FrameLayout
-        android:id="@+id/or"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="20dp"
-        tools:layout_editor_absoluteY="169dp"
-        app:layout_constraintTop_toBottomOf="@id/signInButton"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_margin="10dp"
-        >
-
-
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_gravity="center_vertical"
-            android:background="@color/DividerColor" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-
-            android:background="@color/Background_Fields"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:text="OR" />
-    </FrameLayout>
 
     <TextView
         android:id="@+id/forgotPassword"
