--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,19 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+<android.support.constraint.ConstraintLayout
+
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.fields.curiumx.fields.SignUpActivity"
-    android:id="@+id/signUpActivity">
+    android:id="@+id/signUpActivity"
+    android:animateLayoutChanges="true"
+    >
+
+
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="295dp"
+        android:layout_height="131dp"
+        android:contentDescription="@string/logo"
+        android:scaleType="centerCrop"
+        android:src="@drawable/fields_full"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+<FrameLayout
+
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:visibility="visible"
+    app:layout_constraintTop_toBottomOf="@id/logo">
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/container1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone">
+
+    <TextView
+        android:id="@+id/welcome"
+        android:layout_width="350dp"
+        android:layout_height="49dp"
+        android:text="@string/welcome"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/real_name"
+        android:visibility="visible"
+        />
+
+    <EditText
+        android:id="@+id/real_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:hint="@string/realname"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/welcome"
+        app:layout_constraintBottom_toTopOf="@id/username"
+        android:visibility="visible"/>
 
     <EditText
         android:id="@+id/username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Real name"
-        app:layout_constraintTop_toTopOf="parent"
-
+        android:hint="@string/username"
+        app:layout_constraintTop_toBottomOf="@id/real_name"
+        app:layout_constraintBottom_toTopOf="@id/emailSignUp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:inputType="text"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:visibility="visible"
         />
 
     <EditText
@@ -22,7 +89,13 @@
         android:layout_height="wrap_content"
         android:hint="@string/email"
         app:layout_constraintTop_toBottomOf="@id/username"
-        android:inputType="textEmailAddress"/>
+        app:layout_constraintBottom_toTopOf="@id/passwordSignUp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:inputType="textEmailAddress"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:visibility="visible"/>
 
     <EditText
         android:id="@+id/passwordSignUp"
@@ -30,68 +103,43 @@
         android:layout_height="wrap_content"
         android:hint="@string/password"
         app:layout_constraintTop_toBottomOf="@id/emailSignUp"
-        android:inputType="textPassword"/>
+        app:layout_constraintBottom_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:inputType="textPassword"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:visibility="visible"
+        />
 
     <Button
         android:id="@+id/signUpButton"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
         android:backgroundTint="@color/colorPrimary"
         android:text="@string/sign_up"
-        app:layout_constraintBottom_toTopOf="@id/or"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/passwordSignUp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        tools:layout_editor_absoluteX="10dp" />
-
-    <com.google.android.gms.common.SignInButton
-        android:id="@+id/googleSignIn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/or"/>
+        android:visibility="visible"/>
 
 
     <TextView
         android:id="@+id/signInTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:text="Already have an account? Sign in"
+        android:layout_margin="10dp"
+        android:layout_marginTop="8dp"
         android:gravity="center"
-        android:layout_margin="10dp"/>
-
-
-    <FrameLayout
-        android:id="@+id/or"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="20dp"
-        tools:layout_editor_absoluteY="169dp"
-        app:layout_constraintTop_toBottomOf="@id/signUpButton"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_margin="10dp">
-
-
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_gravity="center_vertical"
-            android:background="@color/DividerColor" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-
-            android:background="@color/Background_Fields"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:text="OR" />
-    </FrameLayout>
+        android:text="@string/alread_have_an_account"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signUpButton"
+        tools:layout_editor_absoluteX="10dp"
+        android:visibility="visible"/>
+    </android.support.constraint.ConstraintLayout>
+</FrameLayout>
 
 </android.support.constraint.ConstraintLayout>
