--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -7,6 +7,21 @@
     tools:context="com.fields.curiumx.fields.ForgotPasswordActivity"
     android:id="@+id/forgot_password_activity">
 
+    <TextView
+        android:id="@+id/forgot_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/forgot_password_text"
+        android:textAppearance="@android:style/TextAppearance.Material.Medium"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:layout_margin="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+
+        />
+
     <EditText
         android:id="@+id/emailAddress"
         android:layout_width="match_parent"
@@ -14,17 +29,21 @@
         android:layout_marginBottom="8dp"
         android:hint="Email"
         android:inputType="textEmailAddress"
-app:layout_constraintTop_toTopOf="parent"        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/forgot_text"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="16dp"/>
 
     <Button
         android:id="@+id/sendButton"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="75dp"
         android:text="Send"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-         />
+        android:backgroundTint="@color/colorPrimary"
+
+        />
 
 </android.support.constraint.ConstraintLayout>
