--- a/app/src/main/res/layout/activity_field_detail.xml
+++ b/app/src/main/res/layout/activity_field_detail.xml
@@ -137,23 +137,23 @@
 
 
 
-    <ImageButton
+    <Button
         android:id="@+id/imTrainingHereButton"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
-        android:src="@drawable/location_icon"
+        android:text="@string/im_training_here"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent" />
 
-    <ImageButton
+    <Button
         android:id="@+id/imTrainingHereNoMoreButton"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
-        android:src="@drawable/cross"
+        android:text="@string/im_not_training_here"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
 
@@ -225,6 +225,16 @@
             android:visibility="gone" />
 
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/prgr"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="gone"/>
 
 </android.support.constraint.ConstraintLayout>
 
